--- a/StoneCase/Views/Home/Registrar.cshtml
+++ b/StoneCase/Views/Home/Registrar.cshtml
@@ -21,3 +21,10 @@
     <br />
     <button type="submit" class="btn btn-success" onclick="registrar()">Cadastrar Cliente</button>
 </form>
+
+<script>
+    function registrar() {
+        window.location.href = window.location.origin + "/Home/Sucesso";
+    }
+
+</script>
