Correção em gerar cobrança

--- a/StoneCase/Views/Home/Registrar.cshtml
+++ b/StoneCase/Views/Home/Registrar.cshtml
@@ -24,7 +24,7 @@
 
 <script>
     function registrar() {
-        window.location.href = window.location.origin + "/Home/Sucesso";
+        window.location.href = window.location.origin;
     }
 
 </script>
